# minsnap

./: README.md
helper_script/: fake_publisher.py  fake_to_land.py  visualize_data.py
minsnap_test/: acc_values.csv  coefficients_y.csv  coefficients_z.csv  position_values.csv  vel_values.csv
minsnap_test/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
minsnap_test/devel/lib/pkgconfig/: quadrotor_msgs.pc  traj_server.pc  traj_utils.pc  trajectory_generator.pc
minsnap_test/devel/lib/traj_server/: my_traj_server
minsnap_test/devel/lib/trajectory_generator/: trajectory_generator_node
minsnap_test/devel/share/quadrotor_msgs/cmake/: quadrotor_msgs-msg-paths.cmake  quadrotor_msgsConfig.cmake
minsnap_test/devel/share/traj_server/cmake/: traj_serverConfig.cmake
minsnap_test/devel/share/traj_utils/cmake/: traj_utilsConfig.cmake
minsnap_test/devel/share/trajectory_generator/cmake/: trajectory_generatorConfig.cmake
minsnap_test/src/traj_server/src/: my_traj_server.cpp
minsnap_test/src/trajectory_generator/: CMakeLists.txt
minsnap_test/src/trajectory_generator/launch/: traj_gen.launch
minsnap_test/src/trajectory_generator/src/: trajectory_generator.cpp
minsnap_trajectory/traj_utils/include/traj_utils/: polynomial_traj.h
minsnap_trajectory/trajectory_generator/: package.xml
minsnap_trajectory/trajectory_generator/config/: px4ctrl.rviz
minsnap_trajectory/trajectory_generator/launch/: traj_gen.launch
minsnap_trajectory/trajectory_generator/src/: trajectory_generator.cpp
(+2 files in other folders)
